881. Boats to Save People
Signed-off-by: Andrey Morozov <github@anmorozov.com>