@@ -33,7 +33,7 @@ public class Approach1 implements Solution {
         for (int num = firstNum; num <= firstNum + available; num++) {
             curr.add(num);
             backtrack(curr, num + 1, ans);
-            curr.remove(curr.size() - 1);
+            curr.removeLast();
         }
 
     }
